Fixed intro styles to look better on Firefox browsers

--- a/public/css/app.less
+++ b/public/css/app.less
@@ -88,6 +88,7 @@ blockquote{
     text-transform:uppercase;
     font-weight:bold;
     text-align:left;
+    white-space: nowrap;
     span{
       line-height:54px;
     }
@@ -108,7 +109,7 @@ span.l2 {
   display:block;
   text-align:center;
   width:auto;
-  font-size:151px;
+  font-size: 148px;
   line-height:0.85em;
   letter-spacing:-2px;
 }
@@ -117,7 +118,7 @@ span.l3 {
   display:block;
   text-align:center;
   width:auto;
-  font-size:120px;
+  font-size:118px;
   line-height:0.85em;
   letter-spacing:-2px;
 }
