--- a/public/css/responsive.less
+++ b/public/css/responsive.less
@@ -212,6 +212,9 @@
 
   blockquote{
     text-align:center;
+    > h3 {
+      white-space: normal;
+    }
   }
   blockquote span.l1,
   blockquote span.l2,
